fix: for now just hide the slider-container on mobile view

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -50,3 +50,12 @@
     margin-left: auto;
     margin-right: 1rem;
   }
+
+
+@media (max-width: 768px) {
+
+  .slider-container {
+    display: none; 
+  }
+
+}
